--- a/[4]_Random_sample_generation_for_backward_prediction/Sampling_from_the_fit_curve_of_original_distributions.ipynb
+++ b/[4]_Random_sample_generation_for_backward_prediction/Sampling_from_the_fit_curve_of_original_distributions.ipynb
@@ -949,7 +949,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save the data genetrated\n",
+    "# Save the data generated\n",
     "\n",
     "df_dist_rand.to_csv('generated_samples_fit_dist.csv', index = None)"
    ]
