--- a/[3]_Regression Models/GPR_with_scaling.ipynb
+++ b/[3]_Regression Models/GPR_with_scaling.ipynb
@@ -850,7 +850,7 @@
     "y_density_mean_std = np.array([y_density.mean(), y_density.std()])\n",
     "print(y_density_mean_std)\n",
     "\n",
-    "np.save('density_mean_std_GPR', y_density_mean_std)"
+    "np.save('RI_mean_std_GPR', y_density_mean_std)"
    ]
   },
   {
