--- a/[5]_Backward_prediction_and_screening_for_multiple_targets/Search_solution_through_Bayesian_optimization.ipynb
+++ b/[5]_Backward_prediction_and_screening_for_multiple_targets/Search_solution_through_Bayesian_optimization.ipynb
@@ -519,7 +519,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 制約条件\n",
+    "# constraints\n",
     "\n",
     "constraints = [\n",
     "    {'name': 'constr_1',\n",
