--- a/Verify_BO_stdev_reflects_plot_size_fairly.ipynb
+++ b/Verify_BO_stdev_reflects_plot_size_fairly.ipynb
@@ -308,7 +308,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Circle size is determined by a mini-max concept, and it looks working well."
+    "# Circle size is determined by a mini-max concept using standard deviation from GPR, and it looks working well."
    ]
   },
   {
